structmeta-tests/tests/compile_fail/struct_meta/vec_not_parse.rs
#[derive(structmeta::StructMeta)]
struct Example {
    x: Vec<NotParse>,
}
struct NotParse;

fn main() {}
