structmeta-tests/tests/compile_fail/struct_meta/vec_not_parse.stderr
error[E0277]: the trait bound `NotParse: Parse` is not satisfied
 --> tests/compile_fail/struct_meta/vec_not_parse.rs:3:5
  |
3 |     x: Vec<NotParse>,
  |     ^ the trait `Parse` is not implemented for `NotParse`
  |
  = help: the following other types implement trait `Parse`:
            Example
            std::boxed::Box<T>
            TokenStream2
            TokenTree
            proc_macro2::Group
            proc_macro2::Punct
            proc_macro2::Ident
            proc_macro2::Literal
          and $N others
note: required by a bound in `syn::punctuated::Punctuated::<T, P>::parse_terminated`
 --> $CARGO/syn-2.0.4/src/punctuated.rs
  |
  |     pub fn parse_terminated(input: ParseStream) -> Result<Self>
  |            ---------------- required by a bound in this associated function
  |     where
  |         T: Parse,
  |            ^^^^^ required by this bound in `Punctuated::<T, P>::parse_terminated`
